<resources>
    <string name="app_name">Food Recipes App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="home_in_home_fragment">Home</string>
    <string name="search_icon">search icon</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="img_random_meal">img random meal</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="categories_in_home_fragment">Categories</string>
    <string name="floating_action_button_for_add_to_favorite">Floating action button for add to favorite</string>
    <string name="go_to_watch_instructions_video">go to watch instructions video</string>
    <string name="category">"Category :"</string>
    <string name="area">"Area :"</string>
    <string name="instructions">"- Instructions : "</string>
    <string name="meal_image">meal image</string>
    <string name="image_category">image category</string>
    <string name="heart">heart</string>
    <string name="no_internet">no internet</string>
</resources>